objects/Approval_Helper__c.object
<CustomObject>
    <fields>
        <fullName>Field_to_Update__c</fullName>
        <label>Field to Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MRSLCA_Id_to_approve__c</fullName>
        <label>MRSLCA Id&apos;s to approve</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mask_Set_Title__c</fullName>
        <label>Mask Set Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTRF_Id__c</fullName>
        <label>PTRF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTRF_Number__c</fullName>
        <label>PTRF Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Approval Helper</label>
    <nameField>
        <label>Approval Helper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Helpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>